--- a/index.html
+++ b/index.html
@@ -8,38 +8,40 @@
   
   <title>Frontend Mentor | Four card feature section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+  <main class="container">
+    <header class="hero">
+      <h2 class="hero__title">Reliable, efficient delivery</h2>
+      <h1 class="hero__description">Powered by Technology</h1>
+      <p class="hero__text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+    </header>
+    <article class="cards-container">
+      <section class="card">
+        <h3 class="card__title">Supervisor</h3>
+        <p class="card__description">Monitors activity to identify project roadblocks</p>
+        <img src="./images/icon-supervisor.svg" alt="Supervisor Icon" class="card__icon">
+      </section>
+      <section class="card">
+        <h3 class="card__title">Team Builder</h3>
+        <p class="card__description">Scans our talent network to create the optimal team for your project</p>
+        <img src="./images/icon-team-builder.svg" alt="Team Builder Icon" class="card__icon">
+      </section>
+      <section class="card">
+        <h3 class="card__title">Karma</h3>
+        <p class="card__description">Regularly evaluates our talent to ensure quality</p>
+        <img src="./images/icon-karma.svg" alt="Karma Icon" class="card__icon">
+      </section>
+      <section class="card">
+        <h3 class="card__title">Calculator</h3>
+        <p class="card__description">Uses data from past projects to provide better delivery estimates</p>
+        <img src="./images/icon-calculator.svg" alt="Calculator Icon" class="card__icon">
+      </section>
+    </article>
+  </main>
   
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
   
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+
 </body>
 </html>
